--- a/UnitTests/packages.config
+++ b/UnitTests/packages.config
@@ -1,4 +1,15 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<!-- 
+********************************************************
+Copyright (C) 2021 Louis S. Berman (louis@squideyes.com) 
+
+This file is part of SetCodeHeaders
+
+The use of this source code is licensed under the terms 
+of the MIT License (https://opensource.org/licenses/MIT)
+********************************************************
+-->
+
+<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="FluentAssertions" version="6.2.0" targetFramework="net472" />
   <package id="MSTest.TestAdapter" version="2.2.7" targetFramework="net472" />
