--- a/UnitTests/packages.config
+++ b/UnitTests/packages.config
@@ -1,19 +1,15 @@
-<!-- 
-********************************************************
-Copyright (C) 2021 Louis S. Berman (louis@squideyes.com) 
-
-This file is part of SetCodeHeaders
-
-The use of this source code is licensed under the terms 
-of the MIT License (https://opensource.org/licenses/MIT)
-********************************************************
--->
-
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FluentAssertions" version="6.2.0" targetFramework="net472" />
-  <package id="MSTest.TestAdapter" version="2.2.7" targetFramework="net472" />
-  <package id="MSTest.TestFramework" version="2.2.7" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net472" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.0" targetFramework="net472" />
+  <package id="FluentAssertions" version="6.5.1" targetFramework="net48" />
+  <package id="MSTest.TestAdapter" version="2.2.8" targetFramework="net48" />
+  <package id="MSTest.TestFramework" version="2.2.8" targetFramework="net48" />
+  <package id="System.IO" version="4.3.0" targetFramework="net48" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net48" />
+  <package id="System.Runtime" version="4.3.1" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
 </packages>
